--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Mega Prospects Pro</string>
-    <string name="app_name_full">MegaProspects Pro</string>
+    <string name="app_name">Mega Prospects</string>
+    <string name="app_name_full">MegaProspects</string>
     <string name="emeraldsoff">Emeraldsoff</string>
 
     <string name="signup_login">OR</string>
